testing/tests/ui/unclosed-nodes.stderr
error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr
         | ^ close to this token
         |
 --> tests/ui/unclosed-nodes.rs:4:3
  |
4 | #[template(source = "{{ expr", ext = "txt")]
  |   ^^^^^^^^

error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr
         | ^ close to this token
         |
 --> tests/ui/unclosed-nodes.rs:8:3
  |
8 | #[template(source = "{{ expr ", ext = "txt")]
  |   ^^^^^^^^

error: unclosed expression, missing "}}"
 --> <source attribute>:1:1
  |
       1 | {{ expr -
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:12:3
   |
12 | #[template(source = "{{ expr -", ext = "txt")]
   |   ^^^^^^^^

error: failed to parse template source
 --> <source attribute>:1:10
  |
       1 | {{ expr -}
         |          ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:16:3
   |
16 | #[template(source = "{{ expr -}", ext = "txt")]
   |   ^^^^^^^^

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:20:3
   |
20 | #[template(source = "{% let x", ext = "txt")]
   |   ^^^^^^^^

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:24:3
   |
24 | #[template(source = "{% let x ", ext = "txt")]
   |   ^^^^^^^^

error: unclosed block, missing "%}"
 --> <source attribute>:1:1
  |
       1 | {% let x -
         | ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:28:3
   |
28 | #[template(source = "{% let x -", ext = "txt")]
   |   ^^^^^^^^

error: failed to parse template source
 --> <source attribute>:1:11
  |
       1 | {% let x -%
         |           ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:32:3
   |
32 | #[template(source = "{% let x -%", ext = "txt")]
   |   ^^^^^^^^

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:36:3
   |
36 | #[template(source = "{# comment", ext = "txt")]
   |   ^^^^^^^^

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:40:3
   |
40 | #[template(source = "{# comment ", ext = "txt")]
   |   ^^^^^^^^

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment -
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:44:3
   |
44 | #[template(source = "{# comment -", ext = "txt")]
   |   ^^^^^^^^

error: unclosed comment, missing "#}"
 --> <source attribute>:1:3
  |
       1 | {# comment -#
         |   ^ close to this token
         |
  --> tests/ui/unclosed-nodes.rs:48:3
   |
48 | #[template(source = "{# comment -#", ext = "txt")]
   |   ^^^^^^^^
